--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="TODO">
 <head>
-  <title>Personal Space</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>TODO</title>
+	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="canonical" href="TODO">
+
+	<link rel="stylesheet" href="base.css">
+
+	<style>
+		/* Put the stuff you want here, or use a <link> tag. */
+	</style>
 </head>
 
 <body>
-Hello, world!
-</body>
+	<div class="center">
+	</div>
 
+	<div class="page">
+	</div>
+
+	<div class="center">
+	</div>
+</body>
 </html>
