--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 
 	<style>
 		/* Put the stuff you want here, or use a <link> tag. */
-		<p> Teste </p>
 	</style>
 </head>
 
 <body>
 	<div class="center">
+				<p> Teste 1</p>
 	</div>
 
 	<div class="page">
+				<p> Teste 2</p>
 	</div>
 
 	<div class="center">
+				<p> Teste 3 </p>
 	</div>
 </body>
 </html>
