--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-	<div class="center">
+	<!--<div class="center">
 				<p> Teste 1</p>
-	</div>
+	</div>-->
 
 	<div class="page">
-				<p> Teste 2</p>
+				<p>Sandro Santos</p>
 	</div>
 
 	<div class="center">
